<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mg4_background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/editorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_sm"
        android:textAppearance="@style/Text.MG4.Display" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:text="@string/value_editor_instruction"
        android:textAppearance="@style/Text.MG4.Secondary" />

    <include
        android:id="@+id/valueEditorContent"
        layout="@layout/dialog_value_editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:minHeight="@dimen/touch_target"
        android:paddingTop="@dimen/spacing_md"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editorCancel"
            style="@style/Widget.MG4.Button.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_md"
            android:text="@string/editor_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editorSave"
            style="@style/Widget.MG4.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_ok" />
    </LinearLayout>
</LinearLayout>
